# aws-glue-schema-registry-python

./: .editorconfig  .gitignore  .python-version  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
src/aws_schema_registry/: __init__.py  avro.py  client.py  codec.py  exception.py  jsonschema.py  model.py  naming.py  schema.py  serde.py
src/aws_schema_registry/adapter/: kafka.py
tests/: test_avro.py  test_client.py  test_codec.py  test_jsonschema.py
tests/integration/: conftest.py  test_kafka_integration.py
tests/integration/java/: README.md  pom.xml  test_java_integration.py  user.json
tests/integration/java/src/main/java/com/disasteraware/aws/schemaregistry/: App.java
tests/integration/kafka/: test_kafka_integration.py  user.json
tests/integration/kafka_test/: README.md  test_kafka_integration.py  user.v1.avsc  user.v2.avsc
