[metadata]
name = aws-glue-schema-registry
version = 0.0.1
description = Use the AWS Glue Schema Registry.
long_description = file: README.md
long_description_content_type = text/markdown
author = Corentin Debost
author_email = corentin.debost@tenefit.com
license = Apache Software License
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Typing :: Typed

[options]
packages =
    aws_schema_registry
package_dir =
    =src
python_requires = >=3.7
install_requires =
    boto3>=1.18.48
    fastavro>=1.4.5
    typing-extensions>=3.10.0.2;python_version<"3.8"
setup_requires =
    setuptools

[options.extras_require]
dev =
    pytest>=6
    flake8>=3
kafka-python =
    kafka-python>=2

[mypy]
files = src,tests

[mypy-kafka.*]
ignore_missing_imports = True

[mypy-boto3.*]
ignore_missing_imports = True
